PopUps and Charts added

--- a/waste-management-api/views/assets/collection-point-popup.html
+++ b/waste-management-api/views/assets/collection-point-popup.html
@@ -138,8 +138,9 @@
                   <div class="form-check">
                     <input class="form-check-input" type="checkbox" id="confirm-delete">
                     <label class="form-check-label" for="confirm-delete">
-                      I understand that once I click the delete button below,<br>
-                      the collection point will be automatically <br> removed from the system.
+                      Please be aware that upon clicking the 'Delete' button, <br> the  
+                      designated collection point will be permanently and <br>
+                      automatically removed from the system.
                     </label>
                   </div>  
                 </div>
