--- a/waste-management-api/views/assets/css/style.css
+++ b/waste-management-api/views/assets/css/style.css
@@ -278,6 +278,15 @@ h6 {
   padding: 15px;
 }
 
+.card-title-charts {
+  padding: 20px 0 15px 0;
+  font-size: 13px;
+  font-weight: 500;
+  color: #012970;
+  font-family: "Poppins", sans-serif;
+  margin-bottom: 10px;
+}
+
 .card-title {
   padding: 20px 0 15px 0;
   font-size: 18px;
