--- a/waste-management-api/views/sidebar_items.pug
+++ b/waste-management-api/views/sidebar_items.pug
@@ -1,5 +1,5 @@
 // Dashboard Nav
-include map_dashboard.pug 
+//- include map_dashboard.pug 
 
 // Collection Points Nav
 include collection_point.pug
