--- a/waste-management-api/views/header.pug
+++ b/waste-management-api/views/header.pug
@@ -6,12 +6,11 @@ header#header.header.fixed-top.d-flex.align-items-center
 
         // End Logo
       div.search-bar
-        form.search-form.d-flex.align-items-center(method="POST" action="#")
-          input(type="text" name="query" placeholder="Search" title="Enter search keyword")
-          button(type="submit" title="Search")
-            i.bi.bi-search
+        //- form.search-form.d-flex.align-items-center(method="POST" action="#")
+        //-   input(type="text" name="query" placeholder="Search" title="Enter search keyword")
+        //-   button(type="submit" title="Search")
+        //-     i.bi.bi-search
 
-      // End Search Bar
       nav.header-nav.ms-auto
         ul.d-flex.align-items-center
           li.nav-item.d-block.d-lg-none
