--- a/waste-management-api/views/header.pug
+++ b/waste-management-api/views/header.pug
@@ -5,14 +5,14 @@ header#header.header.fixed-top.d-flex.align-items-center
         i.bi.bi-list.toggle-sidebar-btn
 
         // End Logo
-      div.search-bar
-        //- form.search-form.d-flex.align-items-center(method="POST" action="#")
-        //-   input(type="text" name="query" placeholder="Search" title="Enter search keyword")
-        //-   button(type="submit" title="Search")
-        //-     i.bi.bi-search
+      //- div.search-bar
+      //-   //- form.search-form.d-flex.align-items-center(method="POST" action="#")
+      //-   //-   input(type="text" name="query" placeholder="Search" title="Enter search keyword")
+      //-   //-   button(type="submit" title="Search")
+      //-   //-     i.bi.bi-search
 
-      nav.header-nav.ms-auto
-        ul.d-flex.align-items-center
-          li.nav-item.d-block.d-lg-none
-            a.nav-link.nav-icon.search-bar-toggle(href="#")
-              i.bi.bi-search
+      //- nav.header-nav.ms-auto
+      //-   ul.d-flex.align-items-center
+      //-     li.nav-item.d-block.d-lg-none
+      //-       a.nav-link.nav-icon.search-bar-toggle(href="#")
+      //-         i.bi.bi-search
