--- a/waste-management-api/views/map_dashboard.pug
+++ b/waste-management-api/views/map_dashboard.pug
@@ -1,4 +1,4 @@
 li.nav-item
-          a.nav-link(href='#')
+          a.nav-link(href='/')
             i.bi.bi-grid
-            span Map Dashboard
+            span(onclick="fetchData('collection_points')") Map Dashboard
