--- a/waste-management-api/views/sidebar_items.pug
+++ b/waste-management-api/views/sidebar_items.pug
@@ -1,5 +1,5 @@
 // Dashboard Nav
-//- include map_dashboard.pug 
+include map_dashboard.pug 
 
 // Collection Points Nav
 include collection_point.pug
@@ -21,7 +21,7 @@ include indicators.pug
 
 
 nav-item
-  a.nav-link.collapsed(href="#")
+  a.nav-link.collapsed(href="/collection_schedule")
     i.bi.bi-clock-history
     span Collection Schedule
 
