--- a/waste-management-api/views/assets/collection-point-popup.html
+++ b/waste-management-api/views/assets/collection-point-popup.html
@@ -2,6 +2,9 @@
     <div class="col-xl-12">
 
       <div class="card">
+        <div class="alert alert-success alert-dismissible fade show" style="display: none;" id="success-alert" role="alert">
+          Collection point updated successfully.
+        </div>
         <button type="button" class="btn-close float-end m-2" aria-label="Close"></button>
         <div class="card-body pt-3">
           <!-- Bordered Tabs -->
@@ -53,6 +56,11 @@
               <div class="row">
                 <div class="col-lg-4 col-md-5 label">City</div>
                 <div class="col-lg-6 col-md-8">{{city}}</div>
+              </div>
+
+              <div class="row">
+                <div class="col-lg-4 col-md-5 label">Total Bins</div>
+                <div class="col-lg-6 col-md-8">{{total_bins}}</div>
               </div>
 
               <div class="row">
@@ -109,6 +117,20 @@
                   <label for="edit-city" class="col-md-4 col-lg-3 col-form-label">City</label>
                   <div class="col-md-8 col-lg-9">
                     <input name="city" type="text" class="form-control" id="edit-city" value="{{city}}">
+                  </div>
+                </div>
+
+                <div class="row mb-3">
+                  <label for="edit-total-bins" class="col-md-4 col-lg-3 col-form-label">Total Bin</label>
+                  <div class="col-md-8 col-lg-9">
+                    <input name="total_bins" type="text" class="form-control" id="edit-total-bins" value="{{total_bins}}">
+                  </div>
+                </div>
+
+                <div class="row mb-3">
+                  <label for="edit-total-weight" class="col-md-4 col-lg-3 col-form-label">Total Weight</label>
+                  <div class="col-md-8 col-lg-9">
+                    <input name="total_weight" type="text" class="form-control" id="edit-total-weight" value="{{total_weight}}">
                   </div>
                 </div>
             
