--- a/waste-management-api/views/assets/css/style.css
+++ b/waste-management-api/views/assets/css/style.css
@@ -5,6 +5,7 @@
   scroll-behavior: smooth;
 }
 
+
 body {
   font-family: "Open Sans", sans-serif;
   background: #f6f9ff;
@@ -515,122 +516,7 @@ h6 {
   color: #012970;
 }
 
-.header-nav .nav-profile img {
-  max-height: 36px;
-}
 
-.header-nav .nav-profile span {
-  font-size: 14px;
-  font-weight: 600;
-}
-
-.header-nav .badge-number {
-  position: absolute;
-  inset: -2px -5px auto auto;
-  font-weight: normal;
-  font-size: 12px;
-  padding: 3px 6px;
-}
-
-.header-nav .notifications {
-  inset: 8px -15px auto auto !important;
-}
-
-.header-nav .notifications .notification-item {
-  display: flex;
-  align-items: center;
-  padding: 15px 10px;
-  transition: 0.3s;
-}
-
-.header-nav .notifications .notification-item i {
-  margin: 0 20px 0 10px;
-  font-size: 24px;
-}
-
-.header-nav .notifications .notification-item h4 {
-  font-size: 16px;
-  font-weight: 600;
-  margin-bottom: 5px;
-}
-
-.header-nav .notifications .notification-item p {
-  font-size: 13px;
-  margin-bottom: 3px;
-  color: #919191;
-}
-
-.header-nav .notifications .notification-item:hover {
-  background-color: #f6f9ff;
-}
-
-.header-nav .messages {
-  inset: 8px -15px auto auto !important;
-}
-
-.header-nav .messages .message-item {
-  padding: 15px 10px;
-  transition: 0.3s;
-}
-
-.header-nav .messages .message-item a {
-  display: flex;
-}
-
-.header-nav .messages .message-item img {
-  margin: 0 20px 0 10px;
-  max-height: 40px;
-}
-
-.header-nav .messages .message-item h4 {
-  font-size: 16px;
-  font-weight: 600;
-  margin-bottom: 5px;
-  color: #444444;
-}
-
-.header-nav .messages .message-item p {
-  font-size: 13px;
-  margin-bottom: 3px;
-  color: #919191;
-}
-
-.header-nav .messages .message-item:hover {
-  background-color: #f6f9ff;
-}
-
-.header-nav .profile {
-  min-width: 240px;
-  padding-bottom: 0;
-  top: 8px !important;
-}
-
-.header-nav .profile .dropdown-header h6 {
-  font-size: 18px;
-  margin-bottom: 0;
-  font-weight: 600;
-  color: #444444;
-}
-
-.header-nav .profile .dropdown-header span {
-  font-size: 14px;
-}
-
-.header-nav .profile .dropdown-item {
-  font-size: 14px;
-  padding: 10px 15px;
-  transition: 0.3s;
-}
-
-.header-nav .profile .dropdown-item i {
-  margin-right: 10px;
-  font-size: 18px;
-  line-height: 0;
-}
-
-.header-nav .profile .dropdown-item:hover {
-  background-color: #f6f9ff;
-}
 
 /*--------------------------------------------------------------
 # Sidebar
@@ -720,8 +606,8 @@ h6 {
 .sidebar-nav .nav-link {
   display: flex;
   align-items: center;
-  font-size: 15px;
-  font-weight: 600;
+  font-size: 14px;
+  font-weight: 500;
   color: #4154f1;
   transition: 0.3;
   background: #f6f9ff;
@@ -730,7 +616,7 @@ h6 {
 }
 
 .sidebar-nav .nav-link i {
-  font-size: 16px;
+  font-size: 13px;
   margin-right: 10px;
   color: #4154f1;
 }
@@ -772,7 +658,7 @@ h6 {
   display: flex;
   align-items: center;
   font-size: 14px;
-  font-weight: 600;
+  font-weight: 500;
   color: #012970;
   transition: 0.3;
   padding: 10px 0 10px 40px;
@@ -785,6 +671,15 @@ h6 {
   line-height: 0;
   border-radius: 50%;
 }
+
+.form-filter {
+  font-size: 14px;
+  font-weight: 500;
+  color: #012970;
+  transition: 0.3s;
+  
+}
+
 
 .sidebar-nav .nav-content a:hover,
 .sidebar-nav .nav-content a.active {
@@ -1046,3 +941,8 @@ h6 {
   max-width: 50px;
 }
 
+
+#success-alert {
+  /* This transition will animate the opacity over 0.5 seconds */
+  transition: opacity 0.5s;
+}
