--- a/waste-management-api/views/layout.pug
+++ b/waste-management-api/views/layout.pug
@@ -58,9 +58,11 @@ html(lang="en")
     aside#sidebar.sidebar
       ul.sidebar-nav#sidebar-nav
         include sidebar_items.pug
-    // End Sidebar
+      // End Sidebar
 
-
+    
+    main#main.main
+    
     block content
 
     
